[gd_scene load_steps=3 format=3 uid="uid://intro001"]

[ext_resource type="Script" path="res://scripts/intro_story.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bxqxqxqxqxqxq" path="res://assets/images/index.png" id="2_index"]

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_index")
expand_mode = 1
stretch_mode = 5

[node name="StoryContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 600.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="StoryLabel" type="Label" parent="StoryContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = ""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="StoryContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "继续"
